force-app/main/default/objects/EngagementAggregation__dll/EngagementAggregation__dll.object-meta.xml
<CustomObject>
    <mktDataLakeAttributes>
        <creationType>System</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory
    >Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>