force-app/main/default/objects/EngagementAggregation__dll/fields/KeyQualifier__c.field-meta.xml
<CustomField>
    <fullName>KeyQualifier__c</fullName>
    <label>Key Qualifier</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KeyQualifier</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>