force-app/main/default/objects/EngagementAggregation__dll/fields/LastEngagementTimestamp__c.field-meta.xml
<CustomField>
    <fullName>LastEngagementTimestamp__c</fullName>
    <label>Last Engagement Timestamp</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>LastEngagementTimestamp</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>